// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Disabled, rendering 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 28px;
}

.c3 {
  outline: none;
}

.c0 {
  display: inline-block;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1 ~ svg {
  border: 1px solid transparent;
  border-radius: 50%;
  padding: 2px;
}

.c1:focus {
  box-shadow: none;
}

.c1:focus ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c1:checked ~ svg {
  color: #0068ef;
}

.c1:disabled ~ svg {
  color: #c0cad5;
  cursor: not-allowed;
}

.c4 {
  vertical-align: middle;
}

<div
  className="c0"
  color="primary"
  data-name="disabled"
  disabled={true}
>
  <input
    className="c1"
    color="primary"
    disabled={true}
    size={24}
    type="radio"
  />
  <svg
    aria-hidden={true}
    className="c2 c3 c4"
    fill="currentcolor"
    focusable={false}
    height={28}
    role="img"
    tabIndex={-1}
    viewBox="0 -960 960 960"
    width={28}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
    />
  </svg>
</div>
`;

exports[`Radio Not Selected, rendering 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 28px;
}

.c3 {
  outline: none;
}

.c0 {
  display: inline-block;
  color: #4f6f8f;
  cursor: pointer;
}

.c0:hover > svg {
  color: #0068ef;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1 ~ svg {
  border: 1px solid transparent;
  border-radius: 50%;
  padding: 2px;
}

.c1:focus {
  box-shadow: none;
}

.c1:focus ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c1:checked ~ svg {
  color: #0068ef;
}

.c1:disabled ~ svg {
  color: #c0cad5;
  cursor: not-allowed;
}

.c4 {
  vertical-align: middle;
}

<div
  className="c0"
  color="primary"
  data-name="unchecked"
>
  <input
    className="c1"
    color="primary"
    size={24}
    type="radio"
  />
  <svg
    aria-hidden={true}
    className="c2 c3 c4"
    fill="currentcolor"
    focusable={false}
    height={28}
    role="img"
    tabIndex={-1}
    viewBox="0 -960 960 960"
    width={28}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
    />
  </svg>
</div>
`;

exports[`Radio Selected, rendering 1`] = `
.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  line-height: 1;
  width: 28px;
}

.c3 {
  outline: none;
}

.c0 {
  display: inline-block;
  color: #4f6f8f;
  cursor: pointer;
}

.c0:hover > svg {
  color: #049 !important;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c1 ~ svg {
  border: 1px solid transparent;
  border-radius: 50%;
  padding: 2px;
}

.c1:focus {
  box-shadow: none;
}

.c1:focus ~ svg {
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
}

.c1:checked ~ svg {
  color: #0068ef;
}

.c1:disabled ~ svg {
  color: #c0cad5;
  cursor: not-allowed;
}

.c4 {
  vertical-align: middle;
}

<div
  checked={true}
  className="c0"
  color="primary"
  data-name="checked"
>
  <input
    checked={true}
    className="c1"
    color="primary"
    size={24}
    type="radio"
  />
  <svg
    aria-hidden={true}
    className="c2 c3 c4"
    fill="currentcolor"
    focusable={false}
    height={28}
    role="img"
    tabIndex={-1}
    viewBox="0 -960 960 960"
    width={28}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M480-280q83 0 141.5-58.5T680-480q0-83-58.5-141.5T480-680q-83 0-141.5 58.5T280-480q0 83 58.5 141.5T480-280zm0 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93zm0-320z"
    />
  </svg>
</div>
`;
